# tari-stable-coin-client

./: .gitignore  Cargo.toml  README.md  token.data
src/: cli.rs  daemon_client.rs  main.rs
