[package]
name = "TariStableCoin"
version = "0.0.1"
edition = "2021"


[dependencies]

tari_wallet_daemon_client = { git = "https://github.com/tari-project/tari-dan", branch = "development" }
tari_engine_types = { git = "https://github.com/tari-project/tari-dan", branch = "development" }
tari_template_lib = { git = "https://github.com/tari-project/tari-dan", branch = "development" }
tari_transaction = { git = "https://github.com/tari-project/tari-dan", branch = "development" }

tari_utilities ="*"


clap = { version = "4", features = ["derive", "env"] }
multiaddr = "0.14.0"
reqwest={ version="*", features=["json"]}
serde_json="*"
tokio ={version="1", features = ["full"] }
